# fenics-in-the-wild

./: .gitignore  Dockerfile  README.md  _config.yml  _toc.yml  create_mesh.py  index.md  installation.md  meshing_instructions.md  pyproject.toml  references.bib  stokes_form.py  usecases.md
.github/workflows/: build_documentation.yml  deploy.yml  formatting.yml
_templates/: footer.html
docker/: Dockerfile.webpage
src/: datasets.md  emi_mixed_mixed.py  emi_mixed_single.py  emi_primal_mixed.py  emi_primal_single.py  generate_brain_mesh.ipynb  glossary.md  installation.md  knp_emi_exact_solutions.py  knp_emi_mms.py  knp_emi_primal_single.py  refinement_and_surface_markers.ipynb  usecases.md
src/ucs/: generate_brain_mesh.ipynb  refinement_and_surface_markers.ipynb  uc1.ipynb  uc1_diffusion.ipynb  uc1_flow.ipynb  uc1b.ipynb  uc2.ipynb
src/ucs/diffusion/: diffusion.ipynb  flow.ipynb  flow_variational_form.ipynb
src/ucs/emi/: emi.md  emi_mixed_mixed.py  emi_mixed_single.py  emi_primal_mixed.py  emi_primal_single.py
ucs/: uc1.ipynb  uc2.ipynb
